Updated personal information.@

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="right-div-content">
           <h3>Current Project(s)</h3>
-          <p>Learning how to develop Ethereum dApps using Web3, React, Ganache and Truffle.</p>
+          <p>Starting the second Junior Enterprise in the United Kingdom as a team of three students at the University of Aberdeen.</p>
         </div>
       </div>
       <!--EndRowDiv-->
