--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
@@ -30,6 +30,7 @@
         </h2>
       </header>
     </div>
+  </div>
 
     <div class="main-content">
 
@@ -105,8 +106,6 @@
         <p class="copyright">&copy; Copyright 2018, Albert Boehm.</p>
       </div>
       <!--EndFooter-->
-
     </div>
 </body>
-
 </html>
