Updated description and CV, added new img.

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
       <!--StartRowDiv-->
       <div class="mainlistview">
         <div class="left-div">
-          <img src="img/car.svg" />
+          <img src="img/briefcase.svg" />
         </div>
         <div class="right-div-content">
           <h3>Professional</h3>
-          <p>I am an intern at the
-            <a href="https://www.bmwgroup.com/">BMW Group</a> in Munich. Our team is optimizing the Electric Motor Software Architecture by using
+          <p>Full-time student until May 2019.</p>
+          <p>Previously, I was an intern at the
+            <a href="https://www.bmwgroup.com/">BMW Group</a> in Munich. Our team aimed for optimizing the Electric Motor Software Architecture by using
             <a href="https://en.wikipedia.org/wiki/Graph_theory">graphs</a>.</p>
         </div>
       </div>
