Added analytics tracking and modified Current Projects section.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134951989-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-134951989-1');
+  </script>
+
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Albert Boehm</title>
 
@@ -69,7 +79,7 @@
       </div>
       <div class="right-div-content">
         <h3>Current Project(s)</h3>
-        <p>Starting the second Junior Enterprise in the United Kingdom as a team of three students at the University of Aberdeen.</p>
+        <p>Setting up a ChainLink node. Research on Blockchain Scaling (mostly Sharding).</p>
       </div>
     </div>
     <!--EndRowDiv-->
@@ -104,7 +114,7 @@
 
     <!--StartFooter-->
     <div class="footer">
-      <p class="copyright">&copy; Copyright 2018, Albert Boehm.</p>
+      <p class="copyright">&copy; Copyright 2019, Albert Boehm.</p>
     </div>
     <!--EndFooter-->
   </div>
