Updated current projects section.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
       <div class="right-div-content">
         <h3>Current Project(s)</h3>
-        <p>Setting up a ChainLink node. Research on Blockchain Scaling (mostly Sharding).</p>
+        <p>Implementing circuits using Verilog on a Basys 3 FPGA.</p>
       </div>
     </div>
     <!--EndRowDiv-->
