Updated professional section.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
       <div class="right-div-content">
         <h3>Professional</h3>
-        <p>Full-time student until May 2019.</p>
+        <p>Currently available for work as freelancer or as an intern.</p>
         <p>Previously, I was an intern at the
           <a href="https://www.bmwgroup.com/">BMW Group</a> in Munich. Our team aimed for optimizing the Electric Motor Software Architecture by using
           <a href="https://en.wikipedia.org/wiki/Graph_theory">graphs</a>.</p>
