Update landing page with more recent information.
Removed old stylsheet because I can't remember why it was there.
Changed some of the text and links on the landing page.

--- a/index.html
+++ b/index.html
@@ -2,16 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134951989-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-134951989-1');
-  </script>
-
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Albert Boehm</title>
 
@@ -23,7 +13,6 @@
   <nav class="main-nav">
     <a href="https://github.com/veluga">GitHub </a>
     <a href="https://www.linkedin.com/in/albert-boehm/">LinkedIn </a>
-    <a href="https://www.facebook.com/aboehm.official">Facebook </a>
   </nav>
 
   <div class="container">
@@ -32,9 +21,9 @@
         <img id="profile-img" src="img/portrait_squared.png">
         <h1>Albert Boehm</h1>
         <h2>
-          Full-Stack Engineer at 
-          <a href="https://www.storytile.net/en/">
-            <span id="highlight-company">Storytile</span>.
+          Incoming Intern at
+          <a href="https://www.bloomberg.com/company/">
+            <span id="highlight-company">Bloomberg</span>.
           </a>
 
           <br>
@@ -51,21 +40,18 @@
 
   <div class="main-content">
 
-    <!--StartRowDiv-->
     <div class="mainlistview">
       <div class="left-div">
         <img src="img/briefcase.svg" />
       </div>
       <div class="right-div-content">
         <h3>Professional</h3>
-        <p>I develop and maintain features for our Live Blogging Web-App.</p>
-        <p>Previously, I was an intern at the
-          <a href="https://www.bmwgroup.com/">BMW Group</a> in Munich.
+        <p>I have previously worked at <a href="https://www.storytile.net/en/">Storytile</a> as a
+          Full-Stack Engineer and with <a href="https://www.bmwgroup.com/">BMW Group</a>
+          as a Research Intern.
       </div>
     </div>
-    <!--EndRowDiv-->
 
-    <!--StartRowDiv-->
     <div class="mainlistview">
       <div class="left-div">
         <img src="img/cv.svg" />
@@ -76,35 +62,28 @@
           <a href="./documents/CV.pdf">history</a> of Albert.</p>
       </div>
     </div>
-    <!--EndRowDiv-->
 
-    <!--StartRowDiv-->
     <div class="mainlistview">
       <div class="left-div">
         <img src="img/screwdriver.svg" />
       </div>
       <div class="right-div-content">
         <h3>Current Project(s)</h3>
-        <p>Bootstrapping the <a href="https://www.linkedin.com/company/11258930/">Computing Society</a>
-          where I lead a team of six young Computer Scientists.</p>
+        <p>Gaining experience with C++ by building a Chip-8 Emulator and Ray Tracer. I am also studying Real
+          Analysis on the side.</p>
       </div>
     </div>
-    <!--EndRowDiv-->
 
-    <!--StartRowDiv-->
     <div class="mainlistview">
       <div class="left-div">
         <img src="img/tree.svg" />
       </div>
       <div class="right-div-content">
         <h3>Fun</h3>
-        <p>Just returned from a camping trip on the Scottish West Coast. Currently reading Thomas Piketty's
-          <a href="https://www.goodreads.com/book/show/18736925-capital-in-the-twenty-first-century">Capital</a>.</p>
+        <p>Right now? Hiking, Code, Math, and Animal Crossing.</p>
       </div>
     </div>
-    <!--EndRowDiv-->
 
-    <!--StartRowDiv-->
     <div class="mainlistview">
       <div class="left-div">
         <img src="img/mail.svg" />
@@ -113,18 +92,16 @@
         <h3>Contact</h3>
         <p> You can reach out to me via
           <a href="mailto:albertboehm@hotmail.de">Email</a> and on
-          <a href="https://www.linkedin.com/in/albert-boehm/">LinkedIn </a> or
-          <a href="https://www.facebook.com/aboehm.official">Facebook </a>.
+          <a href="https://www.linkedin.com/in/albert-boehm/">LinkedIn </a>.
         </p>
       </div>
     </div>
-    <!--EndRowDiv-->
 
-    <!--StartFooter-->
     <div class="footer">
-      <p class="copyright">&copy; Copyright 2019, Albert Boehm.</p>
+      <p class="copyright">&copy; Copyright 2020, Albert Boehm.</p>
     </div>
-    <!--EndFooter-->
+
   </div>
 </body>
+
 </html>
