Fix content. Modify directory structure.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Albert Boehm</title>
 
-  <link href="css/stylesheet.css" type="text/css" rel="stylesheet" />
+  <link href="assets/css/stylesheet.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
 
   <nav class="main-nav">
+    <a href="projects.html">Projects</a>
     <a href="https://github.com/veluga">GitHub </a>
     <a href="https://www.linkedin.com/in/albert-boehm/">LinkedIn </a>
   </nav>
@@ -18,7 +18,7 @@
   <div class="container">
     <div id="wrapper">
       <header id="header">
-        <img id="profile-img" src="img/portrait_squared.png">
+        <img id="profile-img" src="assets/img/portrait_squared.png">
         <h1>Albert Boehm</h1>
         <h2>
           Incoming Intern at
@@ -42,30 +42,30 @@
 
     <div class="mainlistview">
       <div class="left-div">
-        <img src="img/briefcase.svg" />
+        <img src="assets/img/briefcase.svg" />
       </div>
       <div class="right-div-content">
         <h3>Professional</h3>
         <p>I have previously worked at <a href="https://www.storytile.net/en/">Storytile</a> as a
-          Full-Stack Engineer and with <a href="https://www.bmwgroup.com/">BMW Group</a>
+          Full-Stack Engineer and with the <a href="https://www.bmwgroup.com/">BMW Group</a>
           as a Research Intern.
       </div>
     </div>
 
     <div class="mainlistview">
       <div class="left-div">
-        <img src="img/cv.svg" />
+        <img src="assets/img/cv.svg" />
       </div>
       <div class="right-div-content">
         <h3>CV</h3>
         <p>A brief
-          <a href="./documents/CV.pdf">history</a> of Albert.</p>
+          <a href="assets/documents/CV.pdf">history</a> of Albert.</p>
       </div>
     </div>
 
     <div class="mainlistview">
       <div class="left-div">
-        <img src="img/screwdriver.svg" />
+        <img src="assets/img/screwdriver.svg" />
       </div>
       <div class="right-div-content">
         <h3>Current Project(s)</h3>
@@ -76,7 +76,7 @@
 
     <div class="mainlistview">
       <div class="left-div">
-        <img src="img/tree.svg" />
+        <img src="assets/img/tree.svg" />
       </div>
       <div class="right-div-content">
         <h3>Fun</h3>
@@ -86,7 +86,7 @@
 
     <div class="mainlistview">
       <div class="left-div">
-        <img src="img/mail.svg" />
+        <img src="assets/img/mail.svg" />
       </div>
       <div class="right-div-content">
         <h3>Contact</h3>
