--- a/projects.html
+++ b/projects.html
@@ -13,18 +13,6 @@
         <a href="https://www.linkedin.com/in/albert-boehm/">LinkedIn </a>
     </nav>
 
-    <div class="main-content" id="project-list">
-        <div class="mainlistview">
-            <div class="left-div">
-                <img src="assets/img/briefcase.svg" />
-            </div>
-            <div class="right-div-content">
-                <h3>Professional</h3>
-                <p>I have previously worked at <a href="https://www.storytile.net/en/">Storytile</a> as a
-                    Full-Stack Engineer and with <a href="https://www.bmwgroup.com/">BMW Group</a>
-                    as a Research Intern.
-            </div>
-        </div>
-    </div>
+    <div class="main-content" id="project-list"></div>
     <script src="assets/js/main.js" type="text/javascript"></script>
 </body>
