Modify index.html text.

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
       </div>
       <div class="right-div-content">
         <h3>Current Project(s)</h3>
-        <p>Gaining experience with C++ by building a Chip-8 Emulator and Ray Tracer. I am also studying Real
-          Analysis on the side.</p>
+        <p>C++ projects to prepare for my internship and some calculus self-study.</p>
       </div>
     </div>
 
@@ -80,7 +79,7 @@
       </div>
       <div class="right-div-content">
         <h3>Fun</h3>
-        <p>Right now? Hiking, Code, Math, and Animal Crossing.</p>
+        <p>Hiking, Code, Math, and Animal Crossing.</p>
       </div>
     </div>
 
