Add viewport meta tag. Add link to project page. Open CV in new tab.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Albert Boehm</title>
 
   <link href="assets/css/stylesheet.css" type="text/css" rel="stylesheet" />
@@ -59,7 +60,7 @@
       <div class="right-div-content">
         <h3>CV</h3>
         <p>A brief
-          <a href="assets/documents/CV.pdf">history</a> of Albert.</p>
+          <a href="assets/documents/CV.pdf" target="_blank">history</a> of Albert.</p>
       </div>
     </div>
 
@@ -68,8 +69,8 @@
         <img src="assets/img/screwdriver.svg" />
       </div>
       <div class="right-div-content">
-        <h3>Current Project(s)</h3>
-        <p>C++ projects to prepare for my internship and some calculus self-study.</p>
+	      <h3>Current projects</h3>
+	      <p><a href="projects.html">C++ projects</a> to prepare for my internship and some calculus self-study.</p>
       </div>
     </div>
 
