More link fixes on index.html.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <nav class="main-nav">
-    <a href="projects.html">Projects</a>
+    <a href="projects">Projects</a>
     <a href="https://github.com/veluga">GitHub </a>
     <a href="https://www.linkedin.com/in/albert-boehm/">LinkedIn </a>
   </nav>
@@ -70,7 +70,7 @@
       </div>
       <div class="right-div-content">
 	      <h3>Current projects</h3>
-	      <p><a href="projects.html">C++ projects</a> to prepare for my internship and some calculus self-study.</p>
+	      <p><a href="projects">C++ projects</a> to prepare for my internship and some calculus self-study.</p>
       </div>
     </div>
 
