--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav class="main-nav">
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
         <a href="https://github.com/veluga">GitHub </a>
         <a href="https://www.linkedin.com/in/albert-boehm/">LinkedIn </a>
     </nav>
