--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
   <nav class="main-nav">
     <a href="projects">Projects</a>
-    <a href="https://github.com/veluga">GitHub </a>
-    <a href="https://www.linkedin.com/in/albert-boehm/">LinkedIn </a>
+	<a href="blog">Blog</a>
   </nav>
 
   <div class="container">
@@ -34,7 +33,13 @@
           <a href="https://www.abdn.ac.uk/">
             <span id="highlight-university">University of Aberdeen</span>.
           </a>
-        </h2>
+	      </h2>
+			
+		  <br>
+		  <br>
+		  <a href="https://github.com/veluga"><img src="./assets/img/github_logo.png" /></a>
+		  <a href="https://www.linkedin.com/in/albert-boehm/"><img src="./assets/img/linkedin_logo.png" /></a>
+		  <a href="mailto:albertboehm@hotmail.de"><img src="./assets/img/email_logo.png"/></a>
       </header>
     </div>
   </div>
@@ -69,8 +74,8 @@
         <img src="assets/img/screwdriver.svg" />
       </div>
       <div class="right-div-content">
-	      <h3>Current projects</h3>
-	      <p><a href="projects">C++ projects</a> to prepare for my internship and some calculus self-study.</p>
+        <h3>Current projects</h3>
+        <p><a href="projects">C++ projects</a> to prepare for my internship and some calculus self-study.</p>
       </div>
     </div>
 
