Modify projects navbar.

--- a/projects.html
+++ b/projects.html
@@ -8,11 +8,10 @@
 </head>
 
 <body>
-    <nav class="main-nav">
-        <a href="/">Home</a>
-        <a href="https://github.com/veluga">GitHub </a>
-        <a href="https://www.linkedin.com/in/albert-boehm/">LinkedIn </a>
-    </nav>
+	<nav class="main-nav">
+		<a href="/">Home</a>
+		<a href="blog">Blog</a>
+	</nav>
 
     <div class="main-content" id="project-list"></div>
     <script src="assets/js/main.js" type="text/javascript"></script>
