--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,28 @@
 <!DOCTYPE html>
 
+<html>
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Albert Boehm</title>
+
+  <link href="assets/css/stylesheet.css" type="text/css" rel="stylesheet" />
+</head>
+
 <body>
-	Coming soon. I hope.
+  <nav class="main-nav">
+	<a href="/">Home</a>
+    <a href="projects">Projects</a>
+  </nav>
+
+  <div class="main-content">	
+	  <h1>Posts</h1>
+	  <div id="posts"></div>
+	  <div class="footer">
+		<p class="copyright">&copy; Copyright 2020, Albert Boehm.</p>
+	  </div>
+  <div>
 </body>
+
+</html>
