--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,11 @@
 		<a href="blog">Blog</a>
 	</nav>
 
-    <div class="main-content" id="project-list"></div>
+    <div class="main-content" id="project-list">
+		<div class="footer">
+		  <p class="copyright">&copy; Copyright 2020, Albert Boehm.</p>
+		</div>
+	</div>
     <script src="assets/js/main.js" type="text/javascript"></script>
+
 </body>
