Update with new project and occupation.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
   <nav class="main-nav">
     <a href="projects">Projects</a>
-	<a href="blog">Blog</a>
   </nav>
 
   <div class="container">
@@ -22,7 +21,7 @@
         <img id="profile-img" src="assets/img/portrait_squared.png">
         <h1>Albert Boehm</h1>
         <h2>
-          Incoming Intern at
+          Intern at
           <a href="https://www.bloomberg.com/company/">
             <span id="highlight-company">Bloomberg</span>.
           </a>
