--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
   <title>Albert Boehm</title>
 
   <link href="assets/css/stylesheet.css" type="text/css" rel="stylesheet" />
+  <script src="posts/posts.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -23,6 +24,7 @@
 		<p class="copyright">&copy; Copyright 2020, Albert Boehm.</p>
 	  </div>
   <div>
+	  <script src="assets/js/generate_post_list.js" type="text/javascript"></script>
 </body>
 
 </html>
