--- a/projects.html
+++ b/projects.html
@@ -4,13 +4,12 @@
     <title>Albert Boehm</title>
 
     <link href="assets/css/stylesheet.css" type="text/css" rel="stylesheet" />
-    <script src="assets/js/projects.js" type="text/javascript"></script>
+    <script src="projects/projects.js" type="text/javascript"></script>
 </head>
 
 <body>
 	<nav class="main-nav">
 		<a href="/">Home</a>
-		<a href="blog">Blog</a>
 	</nav>
 
     <div class="main-content" id="project-list">
@@ -18,6 +17,6 @@
 		  <p class="copyright">&copy; Copyright 2020, Albert Boehm.</p>
 		</div>
 	</div>
-    <script src="assets/js/main.js" type="text/javascript"></script>
+    <script src="assets/js/generate_project_list.js" type="text/javascript"></script>
 
 </body>
