Update bio, hobbies, portrait

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,10 +19,10 @@
   <div class="container">
     <div id="wrapper">
       <header id="header">
-        <img id="profile-img" src="assets/img/portrait_squared.png">
+        <img id="profile-img" src="assets/img/portrait.jpg">
         <h1>Albert Boehm</h1>
         <h2>
-          Intern at
+          Former intern at
           <a href="https://www.bloomberg.com/company/">
             <span id="highlight-company">Bloomberg</span>.
           </a>
@@ -33,13 +34,13 @@
           <a href="https://www.abdn.ac.uk/">
             <span id="highlight-university">University of Aberdeen</span>.
           </a>
-	      </h2>
-			
-		  <br>
-		  <br>
-		  <a href="https://github.com/veluga"><img src="./assets/img/github_logo.png" /></a>
-		  <a href="https://www.linkedin.com/in/albert-boehm/"><img src="./assets/img/linkedin_logo.png" /></a>
-		  <a href="mailto:albertboehm@hotmail.de"><img src="./assets/img/email_logo.png"/></a>
+        </h2>
+
+        <br>
+        <br>
+        <a href="https://github.com/veluga"><img src="./assets/img/github_logo.png" /></a>
+        <a href="https://www.linkedin.com/in/albert-boehm/"><img src="./assets/img/linkedin_logo.png" /></a>
+        <a href="mailto:albertboehm@hotmail.de"><img src="./assets/img/email_logo.png" /></a>
       </header>
     </div>
   </div>
@@ -52,7 +53,7 @@
       </div>
       <div class="right-div-content">
         <h3>Professional</h3>
-        <p>I have previously worked at <a href="https://www.storytile.net/en/">Storytile</a> as a
+        <p>Prior to interning at Bloomberg, I've worked at <a href="https://www.storytile.net/en/">Storytile</a> as a
           Full-Stack Engineer and with the <a href="https://www.bmwgroup.com/">BMW Group</a>
           as a Research Intern.
       </div>
@@ -75,7 +76,7 @@
       </div>
       <div class="right-div-content">
         <h3>Current projects</h3>
-        <p><a href="projects">C++ projects</a> to prepare for my internship and some calculus self-study.</p>
+        <p>Toying around with OCaml.</p>
       </div>
     </div>
 
@@ -85,7 +86,7 @@
       </div>
       <div class="right-div-content">
         <h3>Fun</h3>
-        <p>Hiking, Code, Math, and Animal Crossing.</p>
+        <p>Code, books, running, and reverse engineering the Pokémon RNG.</p>
       </div>
     </div>
 
