Add Goodreads profile link

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <br>
         <a href="https://github.com/veluga"><img src="./assets/img/github_logo.png" /></a>
         <a href="https://www.linkedin.com/in/albert-boehm/"><img src="./assets/img/linkedin_logo.png" /></a>
+        <a href="https://www.goodreads.com/veluga/"><img src="./assets/img/goodreads_logo.webp" /></a>
         <a href="mailto:albertboehm@hotmail.de"><img src="./assets/img/email_logo.png" /></a>
       </header>
     </div>
