Updated Website for new job and project.

--- a/index.html
+++ b/index.html
@@ -22,17 +22,9 @@
         <img id="profile-img" src="assets/img/portrait.jpg">
         <h1>Albert Boehm</h1>
         <h2>
-          Former intern at
+          Software Engineer at
           <a href="https://www.bloomberg.com/company/">
             <span id="highlight-company">Bloomberg</span>.
-          </a>
-
-          <br>
-          <br>
-
-          Student at the
-          <a href="https://www.abdn.ac.uk/">
-            <span id="highlight-university">University of Aberdeen</span>.
           </a>
         </h2>
 
@@ -54,7 +46,7 @@
       </div>
       <div class="right-div-content">
         <h3>Professional</h3>
-        <p>Prior to interning at Bloomberg, I've worked at <a href="https://www.storytile.net/en/">Storytile</a> as a
+        <p>Prior to working at Bloomberg, I've worked at <a href="https://www.storytile.net/en/">Storytile</a> as a
           Full-Stack Engineer and with the <a href="https://www.bmwgroup.com/">BMW Group</a>
           as a Research Intern.
       </div>
@@ -77,7 +69,7 @@
       </div>
       <div class="right-div-content">
         <h3>Current projects</h3>
-        <p>Toying around with OCaml.</p>
+        <p>Starting and maintaining a <a href="https://en.wikipedia.org/wiki/Zettelkasten">Zettelkasten</a>.</p>
       </div>
     </div>
 
@@ -87,12 +79,12 @@
       </div>
       <div class="right-div-content">
         <h3>Fun</h3>
-        <p>Code, books, running, and reverse engineering the Pokémon RNG.</p>
+        <p>Code, books, running, scuba.</p>
       </div>
     </div>
 
     <div class="footer">
-      <p class="copyright">&copy; Copyright 2020, Albert Boehm.</p>
+      <p class="copyright">&copy; Copyright 2021, Albert Boehm.</p>
     </div>
 
   </div>
