--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       <div class="right-div-content">
         <h3>Current projects</h3>
         <p>Starting and maintaining a <a href="https://en.wikipedia.org/wiki/Zettelkasten">Zettelkasten</a>.</p>
+        <p>Working through 'Crafting Interpreters' by Robert Nystrom.</p>
       </div>
     </div>
 
@@ -79,12 +80,12 @@
       </div>
       <div class="right-div-content">
         <h3>Fun</h3>
-        <p>Code, books, running, scuba.</p>
+        <p>Books, scuba, running.</p>
       </div>
     </div>
 
     <div class="footer">
-      <p class="copyright">&copy; Copyright 2021, Albert Boehm.</p>
+      <p class="copyright">&copy; Copyright 2022, Albert Boehm.</p>
     </div>
 
   </div>
